Nested rendering contexts fix. More tests.